--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Gary Price
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Engineer and Software Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars3.githubusercontent.com/u/3195425?s=400&u=2022ff5a169f5226fd430432ddc76759b9f8a7e5&v=4
 
 #
 # Flags below are optional
